--- a/index.html
+++ b/index.html
@@ -106,17 +106,20 @@
             <div class="container skills">
 
                 <header>
-                    <h2>Tech Skills</h2>
+                    <h2>Tech Skills (1차 완..?)</h2>
                 </header>
 
-                <p style="font-size: 0.8em;line-height: 1.5em;">1안)) 사물인터넷(Internet of Things)이란
+                <p style="font-size: 0.8em;line-height: 1.5em;">1안))
+                    </br>사물인터넷(Internet of Things)이란
                     </br> 사물들의 통신을 바탕으로 센싱한 정보를 가공하여 사용자에게 서비스를 액츄에이팅하는 것입니다.
                     </br> 스마트한 공간에 필요한 온도, 재실, 전력량 등 여러 센서들을 사용해 데이터를 모아서 가공하고,
                     </br> Bluetooth, Wi-Fi, Socket, API 등을 이용해 통신하며 모니터링 및 관리하는 서비스를 말 합니다.
-                    </br> 4년 동안 IoT 플랫폼 외 <a style="font-weight: 500" title="IoT개론, 자료구조와 알고리즘, 임베디드 시스템, IoT 플랫폼, 컴퓨터 네트워크, 네트워크프로그래밍, 외 다수/아니면 성적증명서를 넣어버릴까요...?">여러 과목</a>에서 HW 회로 설계부터 SW 개발까지 학습했고,
+                    </br> 4년 동안 IoT 플랫폼 외 <a style="font-weight: 500" title="IoT개론, 자료구조와 알고리즘, 임베디드 시스템, IoT 플랫폼, 컴퓨터 네트워크, 네트워크프로그래밍, 외 다수/아니면 성적증명서를 넣어버릴까요...?">여러 과목</a>에서 HW 회로 설계부터 SW 개발까지 IoT의 전반적인 과정을 학습했고,
+                    </br> 생각하는 아이템에 대해 규모에 따라 걸리는 시간은 다르지만 <b>혼자서도 IoT 프로젝트를 개발</b>할 수 있습니다.
                     </br>
 
-                    </br> 2안)) 개발의 시작은 C의 기초로 탄탄하게 시작하였습니다. 이후 Java, C++, Python, Web 언어 등 여러 언어를 배움과 함께 <b>자료구조와 알고리즘</b>에 대해 공부했습니다.
+                    </br> 2안))
+                    </br>개발의 시작은 C의 기초로 탄탄하게 시작하였습니다. 이후 Java, C++, Python, Web 언어 등 여러 언어를 배움과 함께 <b>자료구조와 알고리즘</b>에 대해 공부했습니다.
                     </br> IoT 개론을 통해 컴퓨터 구조부터 용어를 학습하였고, 전기전자논리회로를 통해 (간단한) <b>회로 설계와 HW 회로 제작</b>을 실습했습니다.
                     </br> 이를 바탕으로 회로의 센서를 이용하여 임베디드 시스템, IoT 플랫폼 과목에서 <b>Arduino, RaspberryPi</b>를 활용하여 IoT 서비스을 개발했습니다.
                     </br> <b>리눅스 프로그래밍</b>을 통해 Windows가 아닌 다른 환경에서의 개발을 할 수 있게 되었으며,
