--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
         <section id="education" class="three">
             <div class="container">
                 <header>
-                    <h2>Education</h2>
+                    <h2>Education (완)</h2>
                 </header>
 
                 <details name='edu' onclick='onlyone(this)'>
@@ -462,8 +462,10 @@
                                     <p>AWS 기술 에센셜 교육 수료 </br> 2021.01.18</p>
                                 </td>
                                 <td width="70%">
-                                    <p>클라우드</p>
-                                    <a href="files\20210118_AWS 클라우드 교육_수료증 (순천향대학교).pdf">AWS 클라우스 교육 수료증</a>
+                                    <p>배포 수단으로 서버를 직접 구성하거나 클라우드 서비스를 이용하는 방법이 있는데 서버 비용, 성능 등을 고려하여 AWS(Amazon Web Services)에 대한 학습도 필요하다고 생각했습니다.
+                                        <br>AWS 플랫폼 관련 용어와 Management Console 사용법을 학습했고, VPC 구축 및 웹 서버 시작, DB 서버 구축 및 연동, 아키텍처 확장 및 로드 밸런싱에 대한 실습을 간략히 진행했습니다.
+                                    </p>
+                                    <a href="files\20210118_AWS 클라우드 교육_수료증 (순천향대학교).pdf">AWS 클라우드 교육 수료증</a>
                                 </td>
                             </tr>
                         </table>
@@ -495,7 +497,8 @@
                                     <p>순천향대학교 졸업 예정 </br> - 사물인터넷학과 본전공 </br> - 스마트케어 복수전공 </br> 2017.03 - 현재</p>
                                 </td>
                                 <td width="70%">
-                                    <p>4년 동안 성적우수 및 프라임 융합인재 장학금을 통해 등록금 전액을 지원받아 공부했습니다. 사물인터넷의 전반적인 구조에 대해 학습함으로써 하드웨어부터 소프트웨어까지의 개발을 교육받았습니다. 스마트케어의 창업이라는 과목을 통해 아이템을 더 현실적으로 기획하고 개발할 수 있게 되었으며, 의료 분야에 필요한 센싱 개발 및 활동을 경험해 볼 수 있었습니다.</p>
+                                    <p>대학교 시절은 제가 살면서 가장 열심히 살았던 4년이었습니다. 4년 동안 성적우수 및 프라임 융합인재 장학금을 통해 등록금 전액을 지원받아 공부했습니다. 사물인터넷의 전반적인 구조에 대해 학습함으로써 하드웨어부터 소프트웨어까지의 개발을 교육받았습니다. 스마트케어의 창업이라는 과목을 통해 아이템을 더 현실적으로 기획하고 개발할 수 있게 되었으며, 의료 분야에 필요한 센싱 개발 및 활동을
+                                        경험해 볼 수 있었습니다.</p>
                                 </td>
                             </tr>
                         </table>
@@ -510,10 +513,7 @@
                                     <p>초당고등학교 졸업 </br> - 과학중점 과정 </br> 2014.03 - 2017.02</p>
                                 </td>
                                 <td width="70%">
-                                    <p>
-
-
-                                        과학 교과목 담임선생님들의 영향으로 과학에 관심을 갖게 되었고 과학 중점 과정을 공부하며 이과적 공부가 저와 맞다는 것을 알게되었습니다. 수학, 화학동아리에 부원으로 활동하면서 전문지식 매력에 빠졌고 </p>
+                                    <p>고등학교는 미래를 고민하고 진로를 정한 시기입니다. 수학, 화학 동아리에서 활동하며 프로젝트를 정하고 실험하고 결과를 도출, 학생 수준의 소논문을 교내 제출하는 활동을 했었습니다. 그 과정에서 연구를 진행하는 것에 대한 흥미와 적성을 느끼게 되었고, 건축업을 하시는 아버지의 영향을 받아 스마트한 공간을 만드는 IoT에 대해 관심을 가지게 되었습니다.
                                 </td>
                             </tr>
                         </table>
