--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
                 <p style="font-size: 0.8em; text-align: left;">
                     <mark style="font-weight:500;">"안녕하세요. 당신을 위한 서비스를 만드는 신입 IoT 개발자 한예솔입니다."</mark>
-                    </br/>무엇을 만들고 싶은지. 왜 IoT인지. 나의 비전이 뭔지.
+                    </br>무엇을 만들고 싶은지. 왜 IoT인지. 나의 비전이 뭔지.
                 </p>
         </section>
 
@@ -329,62 +329,64 @@
         <section id="experience" class="three">
             <div class="container">
                 <header>
-                    <h2>Experience</h2>
+                    <h2>Experience (완)</h2>
                 </header>
-
                 <section class="carousel">
                     <div class="reel">
                         <article>
-                            <a href="/files/글로벌 빌리지 수료.jpg" class="image featured"><img src="images/글로벌 빌리지.png" alt="" /></a>
+                            <a href="files/글로벌 빌리지 수료.jpg" class="image featured"><img src="images/글로벌 빌리지.png" alt="" /></a>
                             <header>
-                                <h3><a href="/files/글로벌 빌리지 수료.jpg">글로벌 빌리지</a></h3>
+                                <h3><a href="files/글로벌 빌리지 수료.jpg">글로벌 빌리지</a></h3>
                             </header>
-                            <p>2019.09 - 2020.06</br> 느낀점 한두줄 쓰기/ 외국인 친구들과 소통하며 편견을 깨부수는 기회, 언어의 장벽을
+                            <p><b>2019.09 - 2020.06</b>
+                                </br>영어에 친해지기 위해 교환학생들과 함께 생활하는 기숙사에 거주하였습니다. 외국인 친구들과 하루의 1/3 이상 같이 소통하며 생활하면서 다름을 이해하고 낯섬에도 다가갈 수 있는 계기가 되었습니다.
                             </p>
-
                         </article>
 
                         <article>
-                            <a href="http://www.goodmorningcc.com/news/articleView.html?idxno=216318" class="image featured"><img src="images/전공체험.jpg" alt="" /></a>
+                            <a href="https://www.dtnews24.com/news/articleView.html?idxno=569039" class="image featured"><img src="images/전공체험.png" alt="" /></a>
                             <header>
-                                <h3><a href="http://www.goodmorningcc.com/news/articleView.html?idxno=216318">Dream Mentor</a></h3>
+                                <h3><a href="https://www.dtnews24.com/news/articleView.html?idxno=569039">Dream Mentor</a></h3>
                             </header>
-                            <p>2019.03 - 2020.08
-                                </br/> 진로를 고민하는 단계의 중,고등학생들을 만나 IoT를 소개하고 체험시켜주는 활동이었습니다. 학생들이 HW조립과 SW개발을 체험하는 과정에서 제가 느꼈던 IoT에 대한 열정을 다시 찾을 수 있었습니다.</p>
+                            <p><b>2019.03 - 2020.08</b>
+                                </br>진로를 고민하는 단계의 중/고등학생들을 만나 IoT를 소개하고 체험시켜주는 활동을 했습니다. 학생들이 HW조립과 SW개발을 체험하는 과정에서 IoT에 대한 열정을 다시 찾을 수 있었습니다.</p>
                         </article>
 
                         <article>
-                            <a href="/files/글로벌+융합교육+프로그램+결과보고서.pdf" class="image featured"><img src="images/일본연수.png" alt="" /></a>
+                            <a href="files/글로벌+융합교육+프로그램+결과보고서.pdf" class="image featured"><img src="images/일본연수.png" alt="" /></a>
                             <header>
-                                <h3><a href="/files/글로벌+융합교육+프로그램+결과보고서.pdf">일본 워크숍</a></h3>
+                                <h3><a href="files/글로벌+융합교육+프로그램+결과보고서.pdf">일본 워크숍</a></h3>
                             </header>
-                            <p>2019.01
-                                </br/>한국이 아닌 해외(일본)시장에서의 트랜드를 분석했습니다. 그리고 고안한 아이템(웰니스 강의실)에 대한 현지 설문조사와 현지 박람회 방문을 통해 해외 시장에서도 흥미롭게 바라볼만한 아이템에 대해 공부하는 기회가 되었습니다.</p>
+                            <p><b>2019.01</b>
+                                </br>한국이 아닌 해외(일본)시장에서의 트랜드를 분석했습니다. 그리고 고안한 아이템(웰니스 강의실)에 대한 현지 설문조사와 박람회 방문을 통해 해외 시장에서도 흥미롭게 바라볼만한 아이템에 대해 공부하는 기회가 되었습니다.</p>
                         </article>
 
                         <article>
-                            <a href="#" class="image featured"><img src="images/학생회.png" alt="" /></a>
+                            <a class="image featured"><img src="images/학생회.png" alt="" /></a>
                             <header>
-                                <h3><a href="#">학생회</a></h3>
+                                <h3><a>학생회</a></h3>
                             </header>
-                            <p>2017.03 - 2020.08
-                                </br/> 4년 동안 학과에 대한 애정과 소속감을 바탕으로...... 봉사.. 동아리 활동 신청을 직접 만든 서버와 웹페이지를 배포하였다.</p>
+                            <p><b>2017.03 - 2020.08</b>
+                                </br>2년은 학생회 부원으로, 2년은 학생회 회장으로 4년동안 학과에 대한 애정과 소속감을 바탕으로 봉사했습니다. 남들이 알아주지 못하는 일에도 가치가 있다는 것을 느끼게 되었습니다.</p>
                         </article>
 
                         <article>
-                            <a href="#" class="image featured"><img src="images/창업동아리.png" alt="" /></a>
+                            <a class="image featured"><img src="images/창업동아리.png" alt="" /></a>
                             <header>
-                                <h3>창업동아리</h3>
+                                <h3><a>창업동아리</a></h3>
                             </header>
-                            <p>2018.09 - 2020.06 </br> 매 학기마다 아이템 생각해내는 일........ 여러가지 측면에서 생각하는 경험, </p>
+                            <p><b>2018.09 - 2020.06</b>
+                                </br> 매 학기마다 새로운 아이디어를 생각하고 학기말마다 대회로 검증하는 과정을 지속했습니다. 여러가지 측면에서 생각하는 경험, 아이디어를 경제적으로 발전시키고, 팀에서 협업하는 방법 등을 알게 되었습니다.</p>
                         </article>
 
                         <article>
-                            <a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+                            <a class="image featured"><img src="images/학습튜터.jpg" alt="" /></a>
                             <header>
-                                <h3>코딩 학습튜터</h3>
+                                <h3><a>코딩 학습튜터</a></h3>
                             </header>
-                            <p>2019.09 - 2019.12 / 2021.09 - 2021.12</p>
+                            <p><b>2019.09 - 2019.12 / 2021.09 - 2021.12</b>
+                                </br>일전의 학원에서 단기로 일한 경험과 여러 튜터링 활동을 통해 튜터로서 지식을 전해주는 것에 자신이 있었습니다. 수업과정을 빠르게 학습하여 수업 중 질문 조교와 과제 채점을 했습니다.
+                            </p>
                         </article>
                     </div>
                 </section>
@@ -421,7 +423,7 @@
                                 사물인터넷학과 학생 회장
                             </div>
                             <div class="info">
-                                Let&apos;s make coolest things in javascript
+                                Let&apos;s make coolest things in javascript 동아리 활동 신청을 직접 만든 서버와 웹페이지를 배포하였다. 자리에 맞는 사람이 되고자 노력했으며 리더에 대해 많은 고민을 하는 시간이었습니다.
                             </div>
                             <div class="type">
                                 Presentation
