--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
             <div class="container2">
 
                 <header>
-                    <h2>Career</h2>
+                    <h2>Career (완)</h2>
                 </header>
                 <ul>
                     <li>
@@ -408,13 +408,13 @@
                                 Network Labs 연구학생
                             </div>
                             <div class="info">
-                                뭐를 했는지 쭉 쓰기
-                            </div>
-                            <div class="type">
-                                Presentation
+                                <p>- Smart Space <a title="Smart Farm/ Connected Metro/ Smart Rest Area(휴게소)/ Smart Mirror" style="font-weight: 400;">리서치 연구(2018)</a>를 진행하였습니다.</p>
+                                <p>- Growing Band(2018): 영유아를 위한 조각센서 헬스케어 밴드 아이디어 개발</p>
+                                <p>- Smart Plug(2019): 전력량 측정을 통한 모니터링 및 피드백 서비스</p>
+                                <p>- Digital Blood Donation Platform(2020): 헌혈증서의 디지털화를 통한 관리 및 기부 플랫폼</p>
                             </div>
                         </div>
-                        <span class="number"><span>2018.09</span> <span>2020.08</span></span>
+                        <span class="number"><span>2018.03</span> <span>2020.08</span></span>
                     </li>
                     <li>
                         <div>
@@ -423,10 +423,13 @@
                                 사물인터넷학과 학생 회장
                             </div>
                             <div class="info">
-                                Let&apos;s make coolest things in javascript 동아리 활동 신청을 직접 만든 서버와 웹페이지를 배포하였다. 자리에 맞는 사람이 되고자 노력했으며 리더에 대해 많은 고민을 하는 시간이었습니다.
+                                <p>- Leader: 자리에 맞는 사람이 되고자 노력했습니다. 상관으로는 교수님을, 동료로는 학생회를 이끌며 부끄럽지 않도록 외적으로 말의 무게를 알고 내면으로 한번 더 생각하고 움직이는 등 많은 성장을 하는 시간이었습니다.</p>
+                                <p>- <a style="font-weight:500" title="집에 가서 채워넣기">활동</a>: 소통과 화합을 중요시한 저희 학생회는 학과 내부로는 월 1회 이상의 통합 행사 기획을 통한 학부생의 화합을, 외부로는 SNS를 통한 학과 홍보 및 학과 교류 활동을 진행하였습니다.</p>
+                                <p>- <a style="font-weight:500" href="https://github.com/yesol-Han/Linux/tree/main/%EB%8F%99%EC%95%84%EB%A6%AC%20%EC%8B%A0%EC%B2%AD%ED%99%95%EC%9D%B8">동아리 활동 신청 페이지</a> 개발: 한 교수님께서 기존의 만들어진 사이트를 이용하는 것보다 직접 만들어보라는 말씀을 하셔서
+                                    동아리 활동 신청 사이트를 직접 만든 서버와 DB에 연결하여 웹페이지로 배포하였습니다.</p>
                             </div>
                             <div class="type">
-                                Presentation
+
                             </div>
                         </div>
                         <span class="number"><span>2018.12</span> <span>2020.08</span></span>
