1,2번 빼고 완성.

--- a/index.html
+++ b/index.html
@@ -91,13 +91,15 @@
                     <h2>About Me</h2>
                 </header>
 
-                <a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+                <a class="image featured"><img src="images/pic01.jpg" /></a>
                 <p style="font-weight:800;text-align: left;">"24살, ㅇㅇ하는 신입 IoT 개발자"</p>
-                <!-- 아이디어: 선택/집중/분석/노력/책임감있는/-->
+                <!-- 아이디어: 성장/집중/분석/노력/책임감있는/-->
 
                 <p style="font-size: 0.8em; text-align: left;">
                     <mark style="font-weight:500;">"안녕하세요. 당신을 위한 서비스를 만드는 신입 IoT 개발자 한예솔입니다."</mark>
-                    </br>무엇을 만들고 싶은지. 왜 IoT인지. 나의 비전이 뭔지.
+                    </br>What do you want to develop?
+                    </br>Why did you pick IoT?
+                    </br>What's your vision?
                 </p>
         </section>
 
@@ -479,7 +481,7 @@
                 <details name='edu' onclick='onlyone(this)'>
                     <summary>Business Insight Information Technology Strategy through Blockchain</summary>
                     <div class="tpt">
-                        <table style="margin-bottom: 0;">
+                        <table>
                             <tr>
                                 <td width="30%">
                                     <p>블록체인을 통한 Business Insight 정보기술전략 수료</br> 2019.08.19 - 08.20</p>
@@ -536,7 +538,7 @@
                 </header>
 
                 <center>
-                    <div style="padding:35px 20px 1px 20px; border-radius: 5px;text-align:left; min-width:300px; width: 40%; background-color: rgba(255, 255, 246, 0.459); box-shadow: 1px 1px 2px gray;">
+                    <div class="contact-style">
                         <ul style=" list-style:none;">
                             <li><u><i>Yesol Han</i></u></li>
 
