--- a/index.html
+++ b/index.html
@@ -247,8 +247,8 @@
                         <article class="item">
                             <a href="#portfolio" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
                             <header>
-                                <h3>반신욕 도우미</h3>
-                                <p style="font-size: 0.9em; margin:0; line-height: 1.5em;">#2021 #개인Project #진행중</p>
+                                <h3>반려동물을 위한 치료용 풋매트</h3>
+                                <p style="font-size: 0.9em; margin:0; line-height: 1.5em;">#2021 #개인Project #AWS/Mobius #진행중</p>
                             </header>
                         </article>
                         <article class="item">
