--- a/index.html
+++ b/index.html
@@ -174,18 +174,19 @@
 
                 <p style="font-size: 0.7em;">이미지를 클릭하면 관련 코드와 문서들을 확인하실 수 있습니다.</p>
 
-                (임시 표시) p1 - 냉장고, 플러그
-                </br> p2 - 메달, 그로잉, 스마트 옷장, 디지털
-                </br> p3 - 반려동물, 웰니스, 농구
-
                 <div class=" wrapper">
                     <article class="item">
                         <a href="https://github.com/yesol-Han/Anti-Theft-System-in-a-Public-Refrigerator" class="image fit"><img src="images/Refrigerator.png" alt="" /></a>
                         <header>
                             <h3>공용 냉장고 內 도난 방지 시스템</h3>
-                            <p>- 내용: IoT 센서들을 장착하여 냉장고 內 물품(음식)을 꺼내는 행위와 도난 행위를 구분하고 사용자 앱을 통해 물품(음식 통) 관리를 제공하며, 발각된 도난 현장을 촬영해 관리자에게 경고 및 알림을 주는 시스템이다.</p>
-                            <p>- 사용 기술:</p>
-                            <p>#2020 #2인Project <a href="files/SecurIoT 금상.jpg">#캡스톤디자인대회_금상</a> #SCH미디어랩스_학술제_출품 <a href="files/ESW 결선진출.png">#임베디드SW_경진대회_결선</a> #창의적_종합설계_경진대회</a>
+                            <p>- 내용: 1. 공용 냉장고 內 물품(음식)을 꺼내는 행위와 도난 행위 구분
+                                </br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 2. 사용자 앱을 통해 물품 관리를 제공
+                                </br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 3. 발각된 도난 현장을 촬영해 관리자에게 경고 및 알림
+                            </p>
+                            <p>- 사용 기술: Mobius Server, Apache WebServer, Android Studio, Arduino, RaspberryPi</p>
+                            <p>- 사용 언어: C++(Arduino), Python, WEB(HTML5+CSS3+JS), Kotlin</p>
+                            <p style="font-size:0.8em;">#2020 #2인Project <a href="files/SecurIoT 금상.jpg">#캡스톤디자인대회_금상</a> #SCH미디어랩스_학술제_출품
+                                </br><a href="files/ESW 결선진출.png">#임베디드SW_경진대회_결선</a> #창의적_종합설계_경진대회</a>
                             </p>
                         </header>
                     </article>
@@ -196,9 +197,12 @@
                         <a href="https://github.com/yesol-Han/Smart-Plug" class="image fit"><img src="images/Smart_Plug.png" alt="" /></a>
                         <header>
                             <h3>스마트 플러그</h3>
-                            <p>내용:
-                                </br>사용 기술:
-                                </br>#2019 #연구실 #캡스톤디자인대회</p>
+                            <p>- 내용: 1. 가전 기기의 전력 사용량 모니터링
+                                </br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;2. 원격제어 서비스(on/off 제어)
+                            </p>
+                            <p>- 사용 기술: Flask Server, InfluxDB, Grafana Dashboard, Arduino, RaspberryPi</p>
+                            <p>- 사용 언어: C++(Arduino), Python, WEB(HTML5+CSS3+JS)</p>
+                            <p style="font-size:0.8em;">#2019 #Network_연구실 #캡스톤디자인대회</p>
                         </header>
                     </article>
                 </div>
@@ -218,8 +222,15 @@
                     <article class="item">
                         <a href="https://github.com/yesol-Han/IDEA/tree/main/%EB%A9%94%EB%8B%AC(Medical%20Calendar)" class="image fit"><img src="images/메달.png" alt="" /></a>
                         <header>
-                            <h3>메달(Medical Calendar)</h3>
-                            <p>#2019-2020 #팀Project </br>#웹앱 #디바이스</br> #Lab_to_Market대회_우수상</p>
+                            <h3>메달(Medical Calendar): 의료용 스마트 캘린더</h3>
+                            <p>- 내용: Arduino에 연결된 RFID를 통해 약의 위치를 파악하여 알림
+                                </br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 1. 캘린더: 내원날짜와 일반 날짜를 LCD에 표시
+                                </br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 2. 복약지도: 복약 시간마다 약에 맞는 led가 켜져서 어떤 약을 복용해야
+                                </br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;하는지 알림
+                            </p>
+                            <p>- 사용 기술: Dothome Server, navicat DB, Arduino</p>
+                            <p>- 사용 언어: C++(Arduino), Java, WEB(HTML5+CSS3+JS)</p>
+                            <p style="font-size:0.8em;">#2019-2020 #팀Project #디바이스 #Lab_to_Market대회_우수상</p>
                         </header>
                     </article>
                 </div>
@@ -229,9 +240,13 @@
                         <a href="https://github.com/yesol-Han/IDEA/tree/main/%EA%B7%B8%EB%A1%9C%EC%9E%89%EB%B0%B4%EB%93%9C" class="image fit"><img src="images/그로잉밴드.png" alt="" /></a>
                         <header>
                             <h3>그로잉밴드</h3>
-                            <p style="font-size: 0.9em; margin:0; line-height: 1.5em;"> #2019 #팀Project #아이디어
-                                </br>#Lab_to_Market_최우수상
-                                </br><a href="files/BIO대회_예선_참가확인증.jpg">#제6회_BIO창업아이디어경진대회</br>_예선작</a></p>
+                            <p>- 내용: 영유아를 위한 기능 맞춤화 밴드
+                                </br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 1. 기능 맞춤 조각 센서: 풀 장착보다 단가를 낮추어 가격 경쟁력 확보
+                                </br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 2. 타겟 집중: 영유아 사고 방지를 위한 목적으로 영유아~저학년 학생의
+                                </br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 케어 이후 성장에 따른 누적 데이터 확보로 성인까지 서비스 확대
+                            </p>
+                            <p style="font-size:0.8em;">#2019 #팀Project #아이디어 #Lab_to_Market_최우수상
+                                </br><a href="files/BIO대회_예선_참가확인증.jpg">#제6회_BIO창업아이디어경진대회_예선작</a></p>
                         </header>
                     </article>
                 </div>
@@ -241,8 +256,13 @@
                         <a href="https://github.com/yesol-Han/IDEA/tree/main/%EC%8A%A4%EB%A7%88%ED%8A%B8%20%EC%98%B7%EC%9E%A5" class="image fit"><img src="images/스마트클로젯.png" alt="" /></a>
                         <header>
                             <h3>스마트 옷장</h3>
-                            <p>#2019 #2인Project #아이디어
-                                </br><a href="https://github.com/yesol-Han/IDEA/blob/main/%EC%8A%A4%EB%A7%88%ED%8A%B8%20%EC%98%B7%EC%9E%A5/SCH%EB%AF%B8%EB%94%94%EC%96%B4%EB%9E%A9%EC%8A%A4_%ED%95%99%EC%88%A0%EC%A0%9C%20%ED%8F%AC%EC%8A%A4%ED%84%B0_SMART%20CLOSET.pdf">#SCH미디어랩스_학술제_출품</a></p>
+                            <p>- 내용: 옷장과 스타일러를 조합한 효율적인 옷 관리 시스템
+                                </br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 1. 옷 자동 이동: 옷장과 스타일러의 자동이동을 통한 옷 청결화
+                                </br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 2. 스타일 추천: 기계학습(AI)을 통한 옷 추천 기능
+                                </br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 3. 옷 목록 관리: 쇼핑할 때 비슷한 옷 소비 줄임, 어울리는 옷 찾기
+                                </br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 4. 소셜: 친구와 목록 공유, 커플룩 매칭 기능
+                            </p>
+                            <p style="font-size:0.8em;">#2019 #2인Project #아이디어 <a href="https://github.com/yesol-Han/IDEA/blob/main/%EC%8A%A4%EB%A7%88%ED%8A%B8%20%EC%98%B7%EC%9E%A5/SCH%EB%AF%B8%EB%94%94%EC%96%B4%EB%9E%A9%EC%8A%A4_%ED%95%99%EC%88%A0%EC%A0%9C%20%ED%8F%AC%EC%8A%A4%ED%84%B0_SMART%20CLOSET.pdf">#SCH미디어랩스_학술제_출품</a></p>
                         </header>
                     </article>
                 </div>
@@ -252,7 +272,11 @@
                         <a href="https://github.com/yesol-Han/IDEA/tree/main/%EB%94%94%EC%A7%80%ED%84%B8%20%ED%97%8C%ED%98%88%EC%A6%9D%EC%84%9C%20%ED%94%8C%EB%9E%AB%ED%8F%BC" class="image fit"><img src="images/디지털 헌혈증서 플랫폼.png" alt="" /></a>
                         <header>
                             <h3>디지털 헌혈증서 플랫폼</h3>
-                            <p>#2020 #팀Project #캡스톤디자인대회 </br>#블록체인 #아이디어</p>
+                            <p>- 내용: 유가증권 헌혈증의 디지털화
+                                </br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 1. 헌혈증서 관리 (등록, 사용)
+                                </br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 2. 헌혈증서 기부 플랫폼 (양도)
+                            </p>
+                            <p style="font-size:0.8em;">#2020 #팀Project #캡스톤디자인대회 #블록체인 #아이디어</p>
                         </header>
                     </article>
                 </div>
@@ -271,10 +295,17 @@
 
                 <div class="wrapper">
                     <article class="item">
-                        <a href="#portfolio" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
+                        <a class="image fit"><img src="images/반려동물.png" alt="" /></a>
                         <header>
-                            <h3>반려동물을 위한 치료용 풋매트</h3>
-                            <p>#2021 #개인Project #AWS/Mobius #진행중</p>
+                            <h3>반려동물을 위한 치료용 풋매트 (예정)</h3>
+                            <p>- 내용: 반려동물과 주인의 치료 스트레스 최소화
+                                </br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 1. 새로운 타입의 치료: 반려동물의 식사 시간에 발바닥에 약을 분사해 치료
+                                </br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 2. 앱1: 반려동물 상태 (주인의)자가진단 서비스
+                                </br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 3. 앱2: 장기질환, 수술관련 케어 루틴 지도
+                            </p>
+                            <p>- 사용 기술: AWS EC2 Server, AndroidStudio, Arduino, GithubServer</p>
+                            <p>- 사용 언어: C++(Arduino), Node.js</p>
+                            <p style="font-size:0.8em;">#2021 #개인Project #AWS #진행중</p>
                         </header>
                     </article>
                 </div>
@@ -284,7 +315,12 @@
                         <a href="https://github.com/yesol-Han/Arduino/tree/main/%EC%9B%B0%EB%8B%88%EC%8A%A4%20%EA%B0%95%EC%9D%98%EC%8B%A4" class="image fit"><img src="images/wellness강의실.png" alt="" /></a>
                         <header>
                             <h3>웰니스 강의실</h3>
-                            <p>#2018 #팀Project </br>#Lab_to_Market대회 </br>#일본워크숍_대표팀_선발</p>
+                            <p>- 내용: 학생들과 교수님의 편의를 위한 IoT 시스템
+                                </br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 1. 소리조절: 강의실 뒷쪽에 소리크기 측정으로 데시벨 확인
+                                </br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 2. 환경측정: CO2, 온도, 습도, 미세먼지 농도를 측정하여 표시
+                            </p>
+                            <p>- 사용 기술: Arduino(GP2Y1010AU0F, KY0037, MQ135, DHT11, LCD, LED)</p>
+                            <p style="font-size:0.8em;">#2018 #팀Project #Lab_to_Market대회 #일본워크숍_대표팀_선발</p>
                         </header>
                     </article>
                 </div>
@@ -294,7 +330,12 @@
                         <a href="https://github.com/yesol-Han/Arduino/tree/main/%EB%86%8D%EA%B5%AC%20%EA%B2%BD%EA%B8%B0%EC%9E%A5%20IoT%20%EC%8B%9C%EC%8A%A4%ED%85%9C" class="image fit"><img src="images/농구경기장.png" alt="" /></a>
                         <header>
                             <h3>농구 경기장 IoT 시스템</h3>
-                            <p>#2018 #팀Project</p>
+                            <p>- 내용: 여러 시스템 중 흡연실, 관리실 담당
+                                </br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 1. 흡연실: 담배연기를 배출하고 화재시 관리실에 알림
+                                </br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 2. 관리실: 각 서비스에서 들어오는 알림 제어, UART, I2C, SPI 통신
+                            </p>
+                            <p>- 사용 기술: Arduino(LM35, DHT11, Moter, Buzzer, PushButton, Buzzer(Disital), LCD, LED)</p>
+                            <p style="font-size:0.8em;">#2018 #팀Project</p>
                         </header>
                     </article>
                 </div>
