--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <li><a href="#portfolio2" id="portfolio-link"><span class="icon solid fa-th">Project2. Ideas</span></a></li>
                     <li><a href="#portfolio3" id="portfolio-link"><span class="icon solid fa-th">Project3. Embedded</span></a></li>
                     <li><a href="#techskills" id="techskills-link"><span class="icon solid fa-th">Tech Skills</span></a></li>
-                    <li><a href="#potentiality" id="portfolio-link"><span class="icon solid fa-th">Potentiality</span></a></li>
+                    <!-- <li><a href="#potentiality" id="portfolio-link"><span class="icon solid fa-th">Potentiality</span></a></li> -->
                     <li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
                 </ul>
             </nav>
@@ -67,13 +67,13 @@
             <div class="container">
 
                 <header>
-                    <h2 class="alt" style="font-weight: 500;">I'm a <strong>IoT Developer</strong>.</h2>
+                    <h2 class="alt" style="text-align:left;font-weight: 500;">I'm a <strong>IoT Developer</strong>.</h2>
                 </header>
 
-                <p style="font-size: 0.9em;">"당신을 위한 서비스"를 만드는 </br> 신입 IoT 개발자 한예솔입니다.</p>
+                <p style="font-size: 0.9em;text-align:left;">"당신을 위한 서비스"를 만드는 </br> 신입 IoT 개발자 한예솔입니다.</p>
                 </br>
                 </br>
-                <p style="font-size: 0.7em; color: black;">* 모바일 모드보다는 데스크탑 모드를 권장드립니다.</p>
+                <p style="font-size: 0.7em; color: rgb(rgb(161, 209, 212), green, blue);">* 모바일 모드보다는 데스크탑 모드를 권장드립니다.</p>
                 <footer>
                     <a href="#about" class="button scrolly">Introduce Me</a>
                 </footer>
@@ -484,7 +484,7 @@
         </section>
 
         <!-- 7 Potentiality -->
-        <section id="potentiality" class="three">
+        <!-- <section id="potentiality" class="three">
             <div class="container">
                 <header>
                     <h2>Potentiality</h2>
@@ -494,7 +494,7 @@
                 <br> 나의 이런 스킬은 ㅇㅇ회사에 도움이 될테니 초이스 해주세요
                 <br>
             </div>
-        </section>
+        </section> -->
 
         <!-- 8 Contact -->
         <section id="contact" class="four">
