--- a/index.html
+++ b/index.html
@@ -297,13 +297,13 @@
                     <article class="item">
                         <a class="image fit"><img src="images/반려동물.png" alt="" /></a>
                         <header>
-                            <h3>반려동물을 위한 치료용 풋매트 (예정)</h3>
+                            <h3>반려동물을 위한 치료용 풋매트 (진행중)</h3>
                             <p>- 내용: 반려동물과 주인의 치료 스트레스 최소화
                                 </br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 1. 새로운 타입의 치료: 반려동물의 식사 시간에 발바닥에 약을 분사해 치료
                                 </br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 2. 앱1: 반려동물 상태 (주인의)자가진단 서비스
                                 </br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 3. 앱2: 장기질환, 수술관련 케어 루틴 지도
                             </p>
-                            <p>- 사용 기술: AWS EC2 Server, AndroidStudio, Arduino, GithubServer</p>
+                            <p>- 사용 기술: AWS EC2 Server, AndroidStudio, WIFI_D1R2(ESP8266)(가습기 모듈, water level, HC-SR04, tact switch))</p>
                             <p>- 사용 언어: C++(Arduino), Node.js</p>
                             <p style="font-size:0.8em;">#2021 #개인Project #AWS #진행중</p>
                         </header>
@@ -334,7 +334,7 @@
                                 </br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 1. 흡연실: 담배연기를 배출하고 화재시 관리실에 알림
                                 </br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 2. 관리실: 각 서비스에서 들어오는 알림 제어, UART, I2C, SPI 통신
                             </p>
-                            <p>- 사용 기술: Arduino(LM35, DHT11, Moter, Buzzer, PushButton, Buzzer(Disital), LCD, LED)</p>
+                            <p>- 사용 기술: Arduino(LM35, DHT11, Moter, Buzzer, PushButton, Buzzer(Digital), LCD, LED)</p>
                             <p style="font-size:0.8em;">#2018 #팀Project</p>
                         </header>
                     </article>
