--- a/index.html
+++ b/index.html
@@ -110,8 +110,9 @@ ex. 지각이 뭐죠? 12년 개근인생
 -->
                 <div class="row">
                     <div class="col-3 col-12-mobile">
-                        <image src="./images/me.jpg" style="width: 100%;"></image>
+                        <image src="./images/me.jpg" style="width: 100%;margin-bottom: 0;"></image>
 
+                        <p class="gowun" style="text-align: center; font-size:1.1em;background-color: beige;">한 예 솔</p>
                         <p class="nanum" style="font-size: 1.5em;">#팀워크 #창의적 <br>#책임감 #센스</p>
                     </div>
                     <div class="col-9 col-12-mobile">
@@ -160,7 +161,6 @@ ex. 지각이 뭐죠? 12년 개근인생
                         </details>
                     </div>
                 </div>
-
 
 
             </div>
@@ -381,6 +381,7 @@ ex. 지각이 뭐죠? 12년 개근인생
                             </p>
                         </article>
 
+
                         <article class="item2" style="box-shadow: none;">
                             <h3 class="progressbar-title">WEB: HTML5 + CSS3 + JS</h3>
                             <div class="progress">
@@ -409,6 +410,19 @@ ex. 지각이 뭐죠? 12년 개근인생
                             </p>
                         </article>
 
+                        <article class="item2" style="box-shadow: none;">
+                            <h3 class="progressbar-title">Machine Learning</h3>
+                            <div class="progress">
+                                <div class="progress-bar" style="width: 30%; background: #74a9d4;">
+                                    <span class="progress-icon fa fa-check" style="border-color:#74a9d4; color:#74a9d4;"></span>
+                                    <div class="progress-value">30%</div>
+                                </div>
+                            </div>
+                            <p>-'스마트폰을 통한 행동인식', '부동산 집값 예측' 등 프로젝트
+                                </br>- 아나콘다(Jupyter Notebook) 툴로 실습
+                            </p>
+                        </article>
+
                     </div>
 
                     <div class="col-6 col-12-mobile">
@@ -429,14 +443,28 @@ ex. 지각이 뭐죠? 12년 개근인생
                         <article class="item2" style="box-shadow: none;">
                             <h3 class="progressbar-title">C/C++</h3>
                             <div class="progress">
-                                <div class="progress-bar" style="width: 70%; background: #f0ad4e;">
-                                    <span class="progress-icon fa fa-check" style="border-color:#f0ad4e; color:#f0ad4e;"></span>
-                                    <div class="progress-value">70%</div>
+                                <div class="progress-bar" style="width: 90%; background: #ed687c;">
+                                    <span class="progress-icon fa fa-check" style="border-color:#ed687c; color:#ed687c;"></span>
+                                    <div class="progress-value">90%</div>
                                 </div>
                             </div>
                             <p>- 컴퓨터 입문을 C언어로 하여 탄탄한 기본기를 갖춤
                                 </br>- C++언어로 자료구조와 알고리즘을 학습
                                 </br>- Socket, Bluetooth 등 통신 개발
+                            </p>
+                        </article>
+
+                        <article class="item2" style="box-shadow: none;">
+                            <h3 class="progressbar-title">Java</h3>
+                            <div class="progress">
+                                <div class="progress-bar" style="width: 70%; background: #f0ad4e;">
+                                    <span class="progress-icon fa fa-check" style="border-color:#f0ad4e; color:#f0ad4e;"></span>
+                                    <div class="progress-value">70%</div>
+                                </div>
+                            </div>
+                            <p>- Socket, GUI Chat 등 Network Programming 공부 기반 언어
+                                </br>- 메달(Medical Calendar) 프로젝트의 의료진이 보는 GUI 개발
+                                </br>- Android Studio에서 Mobius를 이용한 센싱 앱 개발
                             </p>
                         </article>
 
@@ -451,19 +479,6 @@ ex. 지각이 뭐죠? 12년 개근인생
                             <p>- Server Back-end 관리
                                 </br> - RaspberryPi에서 데이터 가공
                                 </br> - 반려동물 프로젝트에 사용하기 위해 공부 중
-                            </p>
-                        </article>
-
-                        <article class="item2" style="box-shadow: none;">
-                            <h3 class="progressbar-title">Machine Learning</h3>
-                            <div class="progress">
-                                <div class="progress-bar" style="width: 30%; background: #74a9d4;">
-                                    <span class="progress-icon fa fa-check" style="border-color:#74a9d4; color:#74a9d4;"></span>
-                                    <div class="progress-value">30%</div>
-                                </div>
-                            </div>
-                            <p>-'스마트폰을 통한 행동인식', '부동산 집값 예측' 등 프로젝트
-                                </br>- 아나콘다(Jupyter Notebook) 툴로 실습
                             </p>
                         </article>
 
