--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ ex. 지각이 뭐죠? 12년 개근인생
                         </details>
 
                         <details name='edu' onclick='onlyone(this)'>
-                            <summary>License</summary>
+                            <summary>자격증</summary>
 
                             <div class="tpt">
                                 <div class="about-edu" style="margin-top: 0;">
@@ -162,7 +162,13 @@ ex. 지각이 뭐죠? 12년 개근인생
                     </div>
                 </div>
 
-
+                <!-- <br/>
+                <p class="gowun" style="margin-bottom: 0;">Q. 문서는 쓸 줄 아나요?</p>
+                <p class="gowun">A. PPT, Excel, Word, 한글 모두 중간 수준 이상으로 쓸 줄 압니다. 다른 사람의 문서를 검토해주고, 학생회 임원으로서 공적인 문서를 게시하다 보니 저절로 늘게 되었습니다.</p>
+                <p class="gowun" style="margin-bottom: 0;">Q. 창의적이라는 걸 어떻게 알죠?</p>
+                <p class="gowun">A. 남보다 더 많이 도전하고, 정보를 찾고, 생각한다면 누구나 창의적일 수 있다고 생각합니다. 저는 과제에 성실했고, 없던 가치를 찾았더니 창의적인 아이템이 되었습니다. 제가 참여한 팀의 10개 중 8개는 저의 아이디어로 시작된 아이템입니다.</p>
+                <p class="gowun" style="margin-bottom: 0;">Q. </p>
+                <p class="gowun">A. </p> -->
             </div>
         </section>
 
@@ -205,6 +211,24 @@ ex. 지각이 뭐죠? 12년 개근인생
                             <p>- 사용 기술: Flask Server, InfluxDB, Grafana Dashboard, Arduino, RaspberryPi</p>
                             <p>- 사용 언어: C++(Arduino), Python, WEB(HTML5+CSS3+JS)</p>
                             <p style="font-size:0.8em;">#2019 #Network_연구실 #캡스톤디자인대회</p>
+                        </header>
+                    </article>
+                </div>
+
+                </br>
+                <div class="wrapper">
+                    <article class="item">
+                        <a class="image fit"><img src="images/반려동물.png" alt="" /></a>
+                        <header>
+                            <h3>반려동물을 위한 치료용 풋매트 (진행중)</h3>
+                            <p>- 내용: 반려동물과 주인의 치료 스트레스 최소화
+                                </br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 1. 새로운 타입의 치료: 반려동물의 식사 시간에 발바닥에 약을 분사해 치료
+                                </br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 2. 앱1: 반려동물 상태 (주인의)자가진단 서비스
+                                </br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 3. 앱2: 장기질환, 수술관련 케어 루틴 지도
+                            </p>
+                            <p>- 사용 기술: Mobius Server, AndroidStudio, WIFI_D1R2(ESP8266)(가습기 모듈, water level, HC-SR04, tact switch), Postman</p>
+                            <p>- 사용 언어: C++(Arduino), Web(Node.js)</p>
+                            <p style="font-size:0.8em;">#2021 #개인Project #AWS #진행중</p>
                         </header>
                     </article>
                 </div>
@@ -295,23 +319,6 @@ ex. 지각이 뭐죠? 12년 개근인생
 
                 <p style="font-size: 0.7em;">이미지를 클릭하면 관련 코드와 문서들을 확인하실 수 있습니다.</p>
 
-                <div class="wrapper">
-                    <article class="item">
-                        <a class="image fit"><img src="images/반려동물.png" alt="" /></a>
-                        <header>
-                            <h3>반려동물을 위한 치료용 풋매트 (진행중)</h3>
-                            <p>- 내용: 반려동물과 주인의 치료 스트레스 최소화
-                                </br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 1. 새로운 타입의 치료: 반려동물의 식사 시간에 발바닥에 약을 분사해 치료
-                                </br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 2. 앱1: 반려동물 상태 (주인의)자가진단 서비스
-                                </br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 3. 앱2: 장기질환, 수술관련 케어 루틴 지도
-                            </p>
-                            <p>- 사용 기술: AWS EC2 Server, AndroidStudio, WIFI_D1R2(ESP8266)(가습기 모듈, water level, HC-SR04, tact switch))</p>
-                            <p>- 사용 언어: C++(Arduino), Node.js</p>
-                            <p style="font-size:0.8em;">#2021 #개인Project #AWS #진행중</p>
-                        </header>
-                    </article>
-                </div>
-                </br>
                 <div class="wrapper">
                     <article class="item">
                         <a href="https://github.com/yesol-Han/Arduino/tree/main/%EC%9B%B0%EB%8B%88%EC%8A%A4%20%EA%B0%95%EC%9D%98%EC%8B%A4" class="image fit"><img src="images/wellness강의실.png" alt="" /></a>
